--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_setting">SettingActivity</string>
     <string name="title_activity_alarm">AlarmActivity</string>
     <string name="title_activity_setting2">Setting2Activity</string>
+    <string name="title_activity_profiles">Profiles</string>
 </resources>
